enhance Search UI [GRDM-19117] - always display scrollbar to prevent movement of the display position. [GRDM-19702]

--- a/website/static/css/pages/search-page-grdm.css
+++ b/website/static/css/pages/search-page-grdm.css
@@ -1,3 +1,7 @@
+body
+{
+    overflow: scroll;
+}
 .add-query
 {
     width: 190px;
